--- a/templates/etc.default.kibana.j2
+++ b/templates/etc.default.kibana.j2
@@ -4,3 +4,10 @@ chroot="{{ kibana_chroot_path }}"
 chdir="{{ kibana_chdir }}"
 nice="{{ kibana_nice }}"
 
+
+{% if kibana_major_version >= 5 %}
+# If this is set to 1, then when `stop` is called, if the process has
+# not exited within a reasonable time, SIGKILL will be sent next.
+# The default behavior is to simply log a message "program stop failed; still running"
+KILL_ON_STOP_TIMEOUT={{ kibana_kill_on_stop_timeout }}
+{% endif %}
