--- a/templates/kibana.yum.repo.j2
+++ b/templates/kibana.yum.repo.j2
@@ -1,6 +1,7 @@
 {% if kibana_major_version|int >= 5 %} 
 [kibana-{{ kibana_major_version }}.x]
 name=Kibana repository for {{ kibana_major_version }}.x packages
+baseurl={{ kibana_yum_repo_baseurl }}
 gpgcheck=1
 gpgkey={{ kibana_signing_key_url }}
 enabled=1
