--- a/templates/kibana-v6.x.yml.j2
+++ b/templates/kibana-v6.x.yml.j2
@@ -124,3 +124,7 @@ ops.interval: {{ kibana_ops_interval }}
 
 # To disable elastic search security features. Change it to true to enable.
 xpack.security.enabled: {{ Kibana_elasticsearch_xpack_security|bool|lower }}
+xpack.graph.enabled:  {{ Kibana_elasticsearch_xpack_graph|bool|lower }}
+xpack.ml.enabled:  {{ Kibana_elasticsearch_xpack_ml|bool|lower }}
+xpack.monitoring.enabled:  {{ Kibana_elasticsearch_xpack_monitoring|bool|lower }}
+xpack.reporting.enabled:  {{ Kibana_elasticsearch_xpack_reporting|bool|lower }}
