Changed size to maxsize for logrotate

--- a/templates/Kibana.logrotate.j2
+++ b/templates/Kibana.logrotate.j2
@@ -2,7 +2,7 @@
 {
     rotate 6
     daily
-    size 100M
+    maxsize 100M
     missingok
     dateext
     copytruncate
@@ -13,7 +13,7 @@
 {
     rotate 6
     daily
-    size 100M
+    maxsize 100M
     missingok
     dateext
     copytruncate
