Fix for logrotate

--- a/templates/kibana.logrotate.j2
+++ b/templates/kibana.logrotate.j2
@@ -8,6 +8,9 @@
     copytruncate
     notifempty
     compress
+    postrotate
+      /bin/kill -HUP $(cat /var/run/kibana/kibana.pid 2>/dev/null) 2>/dev/null
+    endscript
 }
 {{ kibana_log_dir }}/kibana.stderr
 {
@@ -19,4 +22,7 @@
     copytruncate
     notifempty
     compress
+    postrotate
+      /bin/kill -HUP $(cat /var/run/kibana/kibana.pid 2>/dev/null) 2>/dev/null
+    endscript 
 }
