Added dateformat for logrotate

--- a/templates/kibana.logrotate.j2
+++ b/templates/kibana.logrotate.j2
@@ -4,7 +4,7 @@
     daily
     maxsize 100M
     missingok
-    dateext
+    dateext dateformat -%Y-%m-%d-%s
     copytruncate
     notifempty
     compress
@@ -18,7 +18,7 @@
     daily
     maxsize 100M
     missingok
-    dateext
+    dateext dateformat -%Y-%m-%d-%s
     copytruncate
     notifempty
     compress
